--- a/index.html
+++ b/index.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+
+  <body>
+    <!-- Heading primo livello, deve essere unico per esigenze di indicizzazione google -->
     <h1>Ciao! Io sono Fabio De Micco</h1>
-</body>
+    <!-- Heading secondo livello, più piccolo -->
+    <h2>Sottotilolo</h2>
+    <!-- Heading terzo livello, ancora più piccolo -->
+    <h3>Sotto-sottotilolo</h3>
+    <!-- fino ad h6 -->
+
+    <!-- src: sorgente immagine, alt: testo alternativo, width: dimesione immagine -->
+    <!-- immgine online -->
+    <img
+      src="https://guide-images.cdn.ifixit.com/igi/BCU4AgbFicGvFcZA.standard"
+      alt="Immagine stilizzata di un computer."
+      width="300"
+    />
+
+    <!-- immgine locale -->
+    <img
+      src="./immagini/3484878-icona-o-logo-audio-in-stile-linea-moderna-alta-qualita-vettoriale.jpg"
+      alt="Icona audio"
+      width="300"
+    />
+
+    <!-- separatore con linea orizzontale, autochiudente-->
+    <hr />
+
+    <!-- per testi un pò più lunghi -->
+    <p>
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+      Lorem Ipsum has been the industry's standard dummy text ever since the
+      1500s, when an unknown printer took a galley of type and scrambled it to
+      make a type specimen book. It has survived not only five centuries, but
+      also the leap into electronic typesetting, remaining essentially
+      unchanged. It was popularised in the 1960s with the release of Letraset
+      sheets containing Lorem Ipsum passages, and more recently with desktop
+      publishing software like Aldus PageMaker including versions of Lorem
+      Ipsum.
+    </p>
+  </body>
 </html>
