--- a/index.html
+++ b/index.html
@@ -3,14 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Fabio De Micco</title>
   </head>
 
   <body>
     <!-- Heading primo livello, deve essere unico per esigenze di indicizzazione google -->
     <h1>Ciao! Io sono Fabio De Micco</h1>
+
+    <!-- ancoraggio altri file html -->
+    <!-- href: pagina linkata, target: _blank per aprire in una nuova scheda -->
+    <a href="./progetti.html" target="_blank"> Lista Progetti</a>
+
     <!-- Heading secondo livello, più piccolo -->
     <h2>Sottotilolo</h2>
+
+    <!-- Collegamento a sito mediante immagine -->
+    <a href="https://www.apple.com/it/" target="_blank">
+      <img
+        src="https://guide-images.cdn.ifixit.com/igi/BCU4AgbFicGvFcZA.standard"
+        alt="PC"
+        width="50"
+      />
+    </a>
+
     <!-- Heading terzo livello, ancora più piccolo -->
     <h3>Sotto-sottotilolo</h3>
     <!-- fino ad h6 -->
