--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fabio De Micco</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./normalize.css" />
   </head>
 
   <body>
+    <nav>
+      <!-- ancoraggio altri file html -->
+      <!-- href: pagina linkata, target: _blank per aprire in una nuova scheda -->
+      <a class="link" href="./progetti.html" target="_blank"> Lista Progetti</a>
+    </nav>
     <!-- Heading primo livello, deve essere unico per esigenze di indicizzazione google -->
     <h1>Ciao! Io sono Fabio De Micco</h1>
-
-    <!-- ancoraggio altri file html -->
-    <!-- href: pagina linkata, target: _blank per aprire in una nuova scheda -->
-    <a href="./progetti.html" target="_blank"> Lista Progetti</a>
 
     <!-- Heading secondo livello, più piccolo -->
     <h2>Sottotilolo</h2>
